<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_menu_category"
        android:title="@string/menu_category" />

    <item
        android:id="@+id/nav_artist"
        android:icon="@drawable/ic_menu_artist"
        android:title="@string/menu_artist" />

    <item
        android:id="@+id/nav_song"
        android:icon="@drawable/ic_menu_song"
        android:title="@string/menu_song" />

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_menu_feedback"
        android:title="@string/menu_feedback" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/menu_account" />

</menu>