<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/define_dimen_20"
    tools:ignore="ContentDescription, UseCompatTextViewDrawableXml, UnusedAttribute" >

    <ImageView
        android:layout_width="@dimen/define_dimen_60"
        android:layout_height="@dimen/define_dimen_60"
        android:src="@drawable/ic_avatar_default" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:background="@color/black_overlay"/>

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/define_dimen_14"
        android:paddingBottom="@dimen/define_dimen_14"
        android:text="@string/menu_change_password"
        android:drawableTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_menu_change_password"
        android:drawablePadding="@dimen/define_dimen_10"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/define_dimen_14"
        android:paddingBottom="@dimen/define_dimen_14"
        android:text="@string/menu_sign_out"
        android:drawableTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_menu_sign_out"
        android:drawablePadding="@dimen/define_dimen_10"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>
